samples/_failures_safe/1761252805_ff7096_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5669572e.c:173:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  173 | void dfs_util
      | ^~~~
